    #95:  Display Windows toolbar drag handles.
    #96:  Fix Windows formatted text field background.
    #97:  Fix text area disabled/non-editable background.
    #98:  Fix Windows disabled non-editable combo background.
    #100: Fix WindowsXP title color on Java 1.4.2.
    #101: Windows combo text phantom UI doesn't change with L&f.   
    

NEW FEATURES
    
    #55: Add option to make combo popups wider than the combo.
         You can set a popup prototype display value that
         is used to determine with popup widths.
         
    o Narrow buttons can be disabled in the system properties.
    o Added a JPopupMenu client property for no-margin borders,
      see Options#NO_MARGIN_KEY. This is useful if a JPopupMenu 
      contains a single component, for example a JScrollPane.
    o Added a JTextArea client property for an info background.
      This hint is used for non-editable areas that shall use
      the editable background, not the inactive background.


DISTRIBUTION CHANGES

    o Merged the source folders 'src/common', 'src/plastic'
      and 'src/windows' to 'src/core'.
    o The sources no longer ship as a source Zip archive.
      They now come in the directory structure used by the CVS. 
      This makes it easier to build the distribution using ANT.     
      If you want to attach the library sources in an IDE, 
      point to folder 'src/core'.
    
    
OTHER CHANGES

    o The Windows and Plastic L&fs have been tweaked for Windows Vista.
    o Overhauled the Windows combobox layout and rendering.
    o Overhauled the Plastic combobox layout and rendering.
    o Improved appearance of the Looks demo tabs on Windows.
    o The demo's DemoFrame class accepts a parameter for the L&f: 
      "Windows", "Plastic", "Plastic3D", "PlasticXP",
      or a full class name like:
      "com.sun.java.swing.plaf.windows.WindowsLookAndFeel",
      "javax.swing.plaf.metal.MetalLookAndFeel".
    
    