@@ -48,16 +48,36 @@ import com.jgoodies.looks.common.ExtBasicMenuUI;
  * <tt>Options.NO_ICONS_KEY</tt> to indicate that this menu has no icons.
  *
  * @author  Karsten Lentzsch
- * @version $Revision: 1.2 $
+ * @version $Revision: 1.3 $
  * 
  * @see	com.jgoodies.looks.Options
  */
 public final class PlasticMenuUI extends ExtBasicMenuUI {
 	
+    
+    private boolean oldOpaque;
+    
+    
 	public static ComponentUI createUI(JComponent b) {
 		return new PlasticMenuUI();
 	}
 	
+    protected void installDefaults() {
+        super.installDefaults();
+        if (((JMenu) menuItem).isTopLevelMenu()) {
+            oldOpaque = menuItem.isOpaque();
+            menuItem.setOpaque(false);
+        }
+    }
+    
+    protected void uninstallDefaults() {
+        super.uninstallDefaults();
+        if (((JMenu) menuItem).isTopLevelMenu()) {
+            menuItem.setOpaque(oldOpaque);
+        }
+    }
+
+
 	
 	/**
 	 * Makes the item transparent, if it is not a sub menu and the model is not selected.
@@ -67,7 +87,6 @@ public final class PlasticMenuUI extends ExtBasicMenuUI {
         JMenuItem b = (JMenuItem) c;
 
         if (((JMenu) menuItem).isTopLevelMenu()) {
-            b.setOpaque(false);
             if (b.getModel().isSelected()) {
                 int menuWidth  = menuItem.getWidth();
                 int menuHeight = menuItem.getHeight();
